# VCDTool

./: .gitmodules  CMakeLists.txt  Makefile  README.md
contrib/VCDDashAnalysis/src/: dash-app.py  gui.py  notepad.py
contrib/dash_scripts/src/: dash-app.py
src/: CLIParser.cpp  CLIParser.h  CMakeLists.txt  main.cpp  vcdtool.cpp  vcdtool.h
src/python/: globals.py  reader.py  test.py
test/: ScenarioFromScript_Architecture_1e_5.vcd  codacache_stats.json  config_inf.json  infc.json  my_db.vcd  ncore_stats.json
